update type
